feat(OpenAPI Services): add SearchService
